crates/rtd-swarm-config/tests/snapshots/snapshot_tests__populated_genesis_snapshot_matches-2.snap
---
source: crates/rtd-swarm-config/tests/snapshot_tests.rs
expression: genesis.rtd_system_object().into_genesis_version_for_tooling()
---
epoch: 0
protocol_version: 138
system_state_version: 1
validators:
  total_stake: 20000000000000000
  active_validators:
    - metadata:
        rtd_address: "0x60307f36c284875bf298d4d85a673046648b1ac4b47e712e42ab10d57dd77a26"
        protocol_pubkey_bytes:
          - 153
          - 242
          - 94
          - 246
          - 31
          - 128
          - 50
          - 185
          - 20
          - 99
          - 100
          - 96
          - 152
          - 44
          - 92
          - 198
          - 241
          - 52
          - 239
          - 29
          - 218
          - 231
          - 102
          - 87
          - 242
          - 203
          - 254
          - 193
          - 235
          - 252
          - 141
          - 9
          - 115
          - 116
          - 8
          - 13
          - 246
          - 252
          - 240
          - 220
          - 184
          - 188
          - 75
          - 13
          - 142
          - 10
          - 245
          - 216
          - 14
          - 187
          - 255
          - 43
          - 76
          - 89
          - 159
          - 84
          - 244
          - 45
          - 99
          - 18
          - 223
          - 195
          - 20
          - 39
          - 96
          - 120
          - 193
          - 204
          - 52
          - 126
          - 187
          - 190
          - 197
          - 25
          - 139
          - 226
          - 88
          - 81
          - 63
          - 56
          - 107
          - 147
          - 13
          - 2
          - 194
          - 116
          - 154
          - 128
          - 62
          - 35
          - 48
          - 149
          - 94
          - 189
          - 26
          - 16
        network_pubkey_bytes:
          - 148
          - 228
          - 168
          - 73
          - 49
          - 68
          - 233
          - 230
          - 150
          - 32
          - 140
          - 190
          - 208
          - 2
          - 89
          - 230
          - 221
          - 181
          - 111
          - 151
          - 155
          - 145
          - 195
          - 41
          - 103
          - 86
          - 9
          - 133
          - 190
          - 97
          - 144
          - 155
        worker_pubkey_bytes:
          - 31
          - 42
          - 121
          - 1
          - 168
          - 66
          - 228
          - 211
          - 98
          - 59
          - 198
          - 28
          - 225
          - 193
          - 113
          - 125
          - 46
          - 118
          - 142
          - 15
          - 215
          - 45
          - 248
          - 52
          - 26
          - 245
          - 102
          - 21
          - 185
          - 22
          - 240
          - 56
        proof_of_possession_bytes:
          - 151
          - 191
          - 31
          - 245
          - 62
          - 131
          - 184
          - 23
          - 162
          - 33
          - 124
          - 71
          - 229
          - 10
          - 56
          - 179
          - 47
          - 67
          - 223
          - 65
          - 196
          - 125
          - 67
          - 111
          - 55
          - 104
          - 114
          - 157
          - 166
          - 146
          - 6
          - 104
          - 90
          - 214
          - 33
          - 36
          - 63
          - 93
          - 228
          - 221
          - 166
          - 7
          - 164
          - 61
          - 169
          - 219
          - 78
          - 19
        name: "0"
        description: ""
        image_url: ""
        project_url: ""
        net_address: /ip4/127.0.0.1/tcp/80
        p2p_address: /ip4/127.0.0.1/udp/80
        primary_address: /ip4/127.0.0.1/udp/80
        worker_address: /ip4/127.0.0.1/udp/80
        next_epoch_protocol_pubkey_bytes: ~
        next_epoch_proof_of_possession: ~
        next_epoch_network_pubkey_bytes: ~
        next_epoch_worker_pubkey_bytes: ~
        next_epoch_net_address: ~
        next_epoch_p2p_address: ~
        next_epoch_primary_address: ~
        next_epoch_worker_address: ~
        extra_fields:
          id:
            id: "0x4880542f048864c6357344b92c70cd8d5d0c53068c302249652152cec6bb0a56"
          size: 0
      voting_power: 10000
      operation_cap_id: "0xc74a6a2239dfed363a3f8fa36075962311f61c3541ede8863a9c0533fe8bd71c"
      gas_price: 1000
      staking_pool:
        id: "0xde7a1d540354ff8d943a8b880d2116d08b30ae7f0281fa4c2991be0ad63f0674"
        activation_epoch: 0
        deactivation_epoch: ~
        rtd_balance: 20000000000000000
        rewards_pool:
          value: 0
        pool_token_balance: 20000000000000000
        exchange_rates:
          id: "0x48e7b5c7a4021d2742580e06fc0b70ec7898026261ac1edd18c4b98d810f1b23"
          size: 1
        pending_stake: 0
        pending_total_rtd_withdraw: 0
        pending_pool_token_withdraw: 0
        extra_fields:
          id:
            id: "0xf427516314ee9728327963a37899d6a0a5631fd8d56d2c284d79ae71a7f48ac7"
          size: 0
      commission_rate: 200
      next_epoch_stake: 20000000000000000
      next_epoch_gas_price: 1000
      next_epoch_commission_rate: 200
      extra_fields:
        id:
          id: "0x89487f88fa3cf98527d4ac17c440ec5df89f5eac1ec6ae4313f8c1f3120bc9d9"
        size: 0
  pending_active_validators:
    contents:
      id: "0x047639f970fca0e464b8bca01d08b76f9f211fa44d4a086f25ed97ab785fe843"
      size: 0
  pending_removals: []
  staking_pool_mappings:
    id: "0xa7cf1168c9e7d20b32ecc8a7f5704728cedfa428582ae64d6677c94b05c79f58"
    size: 1
  inactive_validators:
    id: "0xb2bee68a96cd73c4e237aeb8088d6fe1eec3422a3a4a012dbc75b2768988b729"
    size: 0
  validator_candidates:
    id: "0x0b4072d65af109cda0ce559511bb47d5147652b2f662b4dae848cc9b128fd974"
    size: 0
  at_risk_validators:
    contents: []
  extra_fields:
    id:
      id: "0x452a902230b25a0afc72f689f71eb84b788485325a648bb5af7beeb4fb4de80e"
    size: 0
storage_fund:
  total_object_storage_rebates:
    value: 0
  non_refundable_balance:
    value: 0
parameters:
  epoch_duration_ms: 86400000
  stake_subsidy_start_epoch: 0
  max_validator_count: 150
  min_validator_joining_stake: 30000000000000000
  validator_low_stake_threshold: 20000000000000000
  validator_very_low_stake_threshold: 15000000000000000
  validator_low_stake_grace_period: 7
  extra_fields:
    id:
      id: "0x8d7a76ee1bab7dbcb679832a90aeedb5c9fec7dd9feb9340d2ae0819c46c7220"
    size: 0
reference_gas_price: 1000
validator_report_records:
  contents: []
stake_subsidy:
  balance:
    value: 9230000000000000000
  distribution_counter: 0
  current_distribution_amount: 1000000000000000
  stake_subsidy_period_length: 10
  stake_subsidy_decrease_rate: 1000
  extra_fields:
    id:
      id: "0x4d94e298d8a67f9530c52d9f53415aed4065f6de3ff2df365013055c07c36ca9"
    size: 0
safe_mode: false
safe_mode_storage_rewards:
  value: 0
safe_mode_computation_rewards:
  value: 0
safe_mode_storage_rebates: 0
safe_mode_non_refundable_storage_fee: 0
epoch_start_timestamp_ms: 10
extra_fields:
  id:
    id: "0x84d4d1cd1b4375342f4604f75b21ae6269d0b1523e172853fcfdba83f2fd7d7e"
  size: 0
